Split address into multiple parts

--- a/templates/attestation.erb
+++ b/templates/attestation.erb
@@ -5,7 +5,7 @@ Je soussigné(e)
 Mme/M. : <%= @values["LMO_NAME"] %> <%= @values["LMO_FIRSTNAME"] %>
 Né(e) le : <%= @values["LMO_BIRTH_DATE"] %>
 À : <%= @values["LMO_BIRTH_LOCATION"] %>
-Demeurant : <%= @values["LMO_ADDRESS"] %>
+Demeurant : <%= @values["LMO_STREET"] %> <%= @values["LMO_POSTAL_CODE"] %> <%= @values["LMO_CITY"] %>
 
 
 certifie que mon déplacement est lié au motif suivant (cocher la case) autorisé par l’article 3 du décret du 23 mars 2020 prescrivant les mesures générales nécessaires pour faire face à l’épidémie de Covid19 dans le cadre de l’état d’urgence sanitaire (1) :
