From confinement to couvre-feu

--- a/templates/attestation.erb
+++ b/templates/attestation.erb
@@ -1,36 +1,35 @@
 ATTESTATION DE DÉPLACEMENT DÉROGATOIRE
-En application de l’article 3 du décret du 23 mars 2020 prescrivant les mesures générales nécessaires pour faire face à l’épidémie de Covid19 dans le cadre de l’état d’urgence sanitaire
+En application de l'article 51 du décret n° 2020-1262 du 16 octobre 2020 prescrivant les mesures générales nécessaires pour faire face à l'épidémie de covid-19 dans le cadre de l'état d'urgence sanitaire
 
-Je soussigné(e)
-Mme/M. : <%= @values["LMO_NAME"] %> <%= @values["LMO_FIRSTNAME"] %>
-Né(e) le : <%= @values["LMO_BIRTH_DATE"] %>
-À : <%= @values["LMO_BIRTH_LOCATION"] %>
+Je soussigné(e),
+Mme/M. : <%= @values["LMO_NAME"] %> <%= @values["LMO_FIRSTNAME"] %>
+Né(e) le : <%= @values["LMO_BIRTH_DATE"] %> à : <%= @values["LMO_BIRTH_LOCATION"] %>
 Demeurant : <%= @values["LMO_STREET"] %> <%= @values["LMO_POSTAL_CODE"] %> <%= @values["LMO_CITY"] %>
 
+certifie que mon déplacement est lié au motif suivant (cocher la case) autorisé en application des mesures générales nécessaires pour faire face à l'épidémie de Covid19 dans le cadre de l'état d'urgence sanitaire1 :
 
-certifie que mon déplacement est lié au motif suivant (cocher la case) autorisé par l’article 3 du décret du 23 mars 2020 prescrivant les mesures générales nécessaires pour faire face à l’épidémie de Covid19 dans le cadre de l’état d’urgence sanitaire (1) :
+[<% if @reason == "travail" %>X<% else %> <% end %>] Déplacements entre le domicile et le lieu d'exercice de l'activité professionnelle ou le lieu d'enseignement et de formation
 
-[<% if @reasons.include? "travail" %>X<% else %> <% end %>] Déplacements entre le domicile et le lieu d’exercice de l’activité professionnelle, lorsqu’ils sont indispensables à l’exercice d’activités ne pouvant être organisées sous forme de télétravail ou déplacements professionnels ne pouvant être différés (2).
+[<% if @reason == "sante" %>X<% else %> <% end %>] Déplacements pour des consultations et soins ne pouvant être assurés à distance et ne pouvant être différés ou pour l'achat de produits de santé
 
-[<% if @reasons.include? "courses" %>X<% else %> <% end %>] Déplacements pour effectuer des achats de fournitures nécessaires à l’activité professionnelle et des achats de première nécessité (3) dans des établissements dont les activités demeurent autorisées (liste sur gouvernement.fr).
+[<% if @reason == "famille" %>X<% else %> <% end %>] Déplacements pour motif familial impérieux, pour l'assistance aux personnes vulnérables ou précaires ou pour la garde d'enfants
 
-[<% if @reasons.include? "sante" %>X<% else %> <% end %>] Consultations et soins ne pouvant être assurés à distance et ne pouvant être différés ; consultations et soins des patients atteints d'une affection de longue durée.
+[<% if @reason == "handicap" %>X<% else %> <% end %>] Déplacements des personnes en situation de handicap et de leur accompagnant
 
-[<% if @reasons.include? "famille" %>X<% else %> <% end %>] Déplacements pour motif familial impérieux, pour l’assistance aux personnes vulnérables ou la garde d’enfants.
+[<% if @reason == "justice" %>X<% else %> <% end %>] Déplacements pour répondre à une convocation judiciaire ou administrative
 
-[<% if @reasons.include? "sport" %>X<% else %> <% end %>] Déplacements brefs, dans la limite d'une heure quotidienne et dans un rayon maximal d'un kilomètre autour du domicile, liés soit à l'activité physique individuelle des personnes, à l'exclusion de toute pratique sportive collective et de toute proximité avec d'autres personnes, soit à la promenade avec les seules personnes regroupées dans un même domicile, soit aux besoins des animaux de compagnie.
+[<% if @reason == "mission" %>X<% else %> <% end %>] Déplacements pour participer à des missions d'intérêt général sur demande de l'autorité administrative
 
-[<% if @reasons.include? "justice" %>X<% else %> <% end %>] Convocation judiciaire ou administrative.
+[<% if @reason == "transit" %>X<% else %> <% end %>] Déplacements liés à des transits pour des déplacements de longues distances
 
-[<% if @reasons.include? "missions" %>X<% else %> <% end %>] Participation à des missions d’intérêt général sur demande de l’autorité administrative.
+[<% if @reason == "animaux" %>X<% else %> <% end %>] Déplacements brefs, dans un rayon maximal d'un kilomètre autour du domicile pour les besoins des animaux de compagnie
 
-Fait à : <%= @values["LMO_CITY"] %>
-Le : <%= @date %> a <%= @time %>
+Fait à : <%= @values["LMO_CITY"] %>
+Le : <%= @date %> à <%= @time %>
 (Date et heure de début de sortie à mentionner obligatoirement)
 
-Signature :
+Signature :
 
 
-(1) Les personnes souhaitant bénéficier de l'une de ces exceptions doivent se munir s'il y a lieu, lors de leurs déplacements hors de leur domicile, d'un document leur permettant de justifier que le déplacement considéré entre dans le champ de l'une de ces exceptions.
-(2) A utiliser par les travailleurs non-salariés, lorsqu’ils ne peuvent disposer d’un justificatif de déplacement établi par leur employeur.
-(3) Y compris les acquisitions à titre gratuit (distribution de denrées alimentaires…) et les déplacements liés à la perception de prestations sociales et au retrait d’espèces.
+
+    1 Les personnes souhaitant bénéficier de l'une de ces exceptions doivent se munir s'il y a lieu, lors de leurs déplacements hors de leur domicile, d'un document leur permettant de justifier que le déplacement considéré entre dans le champ de l'une de ces exceptions.
