--- a/filler/templates/qrcode.erb
+++ b/filler/templates/qrcode.erb
@@ -1,1 +1,7 @@
-Cree le: <%= Time.now.strftime("%d/%m/%Y") %> a <%= Time.now.strftime("%Hh%M") %>; Nom: <%= @values["LMO_NAME"] %>; Prenom: <%= @values["LMO_FIRSTNAME"] %>; Naissance: <%= @values["LMO_BIRTH_DATE"] %> a <%= @values["LMO_BIRTH_LOCATION"] %>; Adresse: <%= @values["LMO_STREET"] %> <%= @values["LMO_POSTAL_CODE"] %> <%= @values["LMO_CITY"] %>; Sortie: <%= @date %> a <%= @time %>; Motifs: <%= @values["LMO_REASON"] %>
+Cree le: <%= Time.now.strftime("%d/%m/%Y") %> a <%= Time.now.strftime("%Hh%M") %>; 
+Nom: <%= @values["LMO_NAME"] %>; 
+Prenom: <%= @values["LMO_FIRSTNAME"] %>; 
+Naissance: <%= @values["LMO_BIRTH_DATE"] %> a <%= @values["LMO_BIRTH_LOCATION"] %>; 
+Adresse: <%= @values["LMO_STREET"] %> <%= @values["LMO_POSTAL_CODE"] %> <%= @values["LMO_CITY"] %>; 
+Sortie: <%= @date %> a <%= @time %>; 
+Motifs: <%= @values["LMO_REASON"] %>
