Update attestation form

--- a/filler/templates/attestation.erb
+++ b/filler/templates/attestation.erb
@@ -11,7 +11,7 @@ certifie que mon déplacement est lié au motif suivant (cocher la case) autoris
 
 [<% if @values["LMO_REASON"] == "travail" %>X<% else %> <% end %>] Déplacements entre le domicile et le lieu d’exercice de l’activité professionnelle ou le lieu d’enseignement et de formation, déplacements professionnels ne pouvant être différés
 
-[<% if @values["LMO_REASON"] == "sante" %>X<% else %> <% end %>] Déplacements pour des consultations et soins ne pouvant être assurés à distance et ne pouvant être différés ou pour l’achat de produits de santé
+[<% if @values["LMO_REASON"] == "sante" %>X<% else %> <% end %>] Déplacements pour des consultations, examens, actes de prévention (dont vaccination) et soins ne pouvant être assurés à distance ou pour l’achat de produits de santé
 
 [<% if @values["LMO_REASON"] == "famille" %>X<% else %> <% end %>] Déplacements pour motif familial impérieux, pour l’assistance aux personnes vulnérables ou précaires ou pour la garde d’enfants
 
