Update templates for last curfew rules

--- a/filler/templates/qrcode.erb
+++ b/filler/templates/qrcode.erb
@@ -4,4 +4,4 @@ Prenom: <%= @values["LMO_FIRSTNAME"] %>;
 Naissance: <%= @values["LMO_BIRTH_DATE"] %> a <%= @values["LMO_BIRTH_LOCATION"] %>; 
 Adresse: <%= @values["LMO_STREET"] %> <%= @values["LMO_POSTAL_CODE"] %> <%= @values["LMO_CITY"] %>; 
 Sortie: <%= @date %> a <%= @time %>; 
-Motifs: <%= @values["LMO_REASON"] %>
+Motifs: <%= @values["LMO_REASON"] %>;
