--- a/filler/templates/attestation.erb
+++ b/filler/templates/attestation.erb
@@ -1,5 +1,5 @@
 ATTESTATION DE DÉPLACEMENT DÉROGATOIRE
-ENTRE 20 HEURES ET 6 HEURES
+DURANT LES HORAIRES DE COUVRE-FEU (entre 19h et 6h)
 En application de l’article 4 du décret n°2020-1310 du 29 octobre 2020 prescrivant les mesures générales nécessaires pour faire face à l’épidémie de COVID-19 dans le cadre de l’état d’urgence sanitaire
 
 Je soussigné(e),
@@ -9,21 +9,29 @@ Demeurant : <%= @values["LMO_STREET"] %> <%= @values["LMO_POSTAL_CODE"] %> <%= 
 
 certifie que mon déplacement est lié au motif suivant (cocher la case) autorisé en application des mesures générales nécessaires pour faire face à l’épidémie de COVID-19 dans le cadre de l’état d’urgence sanitaire1 :
 
+1. Activité professionnelle, enseignement et formation
 [<% if @values["LMO_REASON"] == "travail" %>X<% else %> <% end %>] Déplacements entre le domicile et le lieu d’exercice de l’activité professionnelle ou le lieu d’enseignement et de formation, déplacements professionnels ne pouvant être différés
 
+2. Consultations et soins
 [<% if @values["LMO_REASON"] == "sante" %>X<% else %> <% end %>] Déplacements pour des consultations, examens, actes de prévention (dont vaccination) et soins ne pouvant être assurés à distance ou pour l’achat de produits de santé
 
+3. Motif familial impérieux, personnes vulnérables ou précaires ou gardes d’enfants
 [<% if @values["LMO_REASON"] == "famille" %>X<% else %> <% end %>] Déplacements pour motif familial impérieux, pour l’assistance aux personnes vulnérables ou précaires ou pour la garde d’enfants
 
+4. Situation de handicap
 [<% if @values["LMO_REASON"] == "handicap" %>X<% else %> <% end %>] Déplacements des personnes en situation de handicap et de leur accompagnant
 
-[<% if @values["LMO_REASON"] == "convocation" %>X<% else %> <% end %>] Déplacements pour répondre à une convocation judiciaire ou administrative
+5. Convocation judiciaire ou administrative
+[<% if @values["LMO_REASON"] == "convocation" %>X<% else %> <% end %>] Déplacements pour répondre à une convocation judiciaire ou administrative, déplacements pour se rendre chez un professionnel du droit, pour un acte ou une démarche qui ne peuvent être réalisés à distance
 
+6. Mission d’intérêt général
 [<% if @values["LMO_REASON"] == "missions" %>X<% else %> <% end %>] Déplacements pour participer à des missions d’intérêt général sur demande de l’autorité administrative
 
-[<% if @values["LMO_REASON"] == "transits" %>X<% else %> <% end %>] Déplacements liés à des transits ferroviaires ou aériens pour des déplacements de longues distances
+7. Déplacements de transit et longue distance
+[<% if @values["LMO_REASON"] == "transits" %>X<% else %> <% end %>] DDéplacements liés à des transits ferroviaires, aériens ou en bus pour des déplacements de longues distances
 
-[<% if @values["LMO_REASON"] == "animaux" %>X<% else %> <% end %>] Déplacements brefs, dans un rayon maximal d’un kilomètre autour du domicile pour les besoins des animaux de compagnie
+8. Animaux de compagnie
+[<% if @values["LMO_REASON"] == "animaux" %>X<% else %> <% end %>] Déplacements brefs dans un rayon maximal d'un kilomètre autour du domicile pour les besoins des animaux de compagnie
 
 Fait à : <%= @values["LMO_CITY"] %>
 Le : <%= @created.strftime("%d/%m/%Y") %> à <%= @created.strftime("%Hh%M") %>
@@ -33,7 +41,3 @@ Le : <%= @created.strftime("%d/%m/%Y") %> à <%= @created.strftime("%Hh%M") %>
 <%= @date %> à <%= @time %>
 
 Signature :
-
-
-
-    1 Les personnes souhaitant bénéficier de l’une de ces exceptions doivent se munir s’il y a lieu, lors de leurs déplacements hors de leur domicile, d’un document leur permettant de justifier que le déplacement considéré entre dans le champ de l’une de ces exceptions.
